[gd_scene load_steps=9 format=3 uid="uid://c1ueau3u8vk35"]

[ext_resource type="Texture2D" uid="uid://coejmsd3aaaua" path="res://assets/sprites/circle.PNG" id="1_7f03s"]
[ext_resource type="Script" path="res://assets/scripts/last_chance.gd" id="1_jdkta"]
[ext_resource type="Texture2D" uid="uid://cmaap1frd4ipt" path="res://assets/sprites/arrow.PNG" id="3_n0p7u"]
[ext_resource type="Theme" uid="uid://bkjd5fsif2jc4" path="res://resources/themes/purpleButtonTheme.tres" id="4_snfk2"]

[sub_resource type="Animation" id="Animation_j2xnb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lastChanceLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("arrow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("skipButton:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kgtdg"]
resource_name = "bob"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1, 1), Vector2(0.95, 0.95)]
}

[sub_resource type="Animation" id="Animation_a1ngn"]
resource_name = "shrinkOut"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lastChanceLabel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("arrow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 2.2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("skipButton:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kq1q3"]
_data = {
"RESET": SubResource("Animation_j2xnb"),
"bob": SubResource("Animation_kgtdg"),
"shrinkOut": SubResource("Animation_a1ngn")
}

[node name="lastChance" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jdkta")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 949.0
offset_top = 559.0
offset_right = 989.0
offset_bottom = 599.0

[node name="TextureButton" type="TextureButton" parent="Control"]
self_modulate = Color(0.388235, 0.607843, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -725.0
offset_top = -512.0
offset_right = 1435.0
offset_bottom = 1108.0
grow_horizontal = 2
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("1_7f03s")

[node name="Label" type="Label" parent="Control/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -507.43
offset_top = -129.698
offset_right = 211.57
offset_bottom = 494.302
grow_horizontal = 2
grow_vertical = 2
rotation = -0.527089
theme_override_font_sizes/font_size = 150
text = "Watch Ad 
For
 Extra Life"
horizontal_alignment = 1

[node name="lastChanceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1243.0
offset_top = 102.0
offset_right = 1902.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 100
text = "LAST CHANCE"

[node name="arrow" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -164.0
offset_right = -90.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
rotation = 2.4103
scale = Vector2(2, 2)
texture = ExtResource("3_n0p7u")

[node name="skipButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -380.0
offset_top = -243.0
offset_right = -69.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_snfk2")
theme_override_font_sizes/font_size = 125
text = "Skip"

[node name="timeLeftBar" type="TextureProgressBar" parent="."]
self_modulate = Color(1, 0.380392, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -766.0
offset_top = -465.0
offset_right = 1394.0
offset_bottom = 1155.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
fill_mode = 5
texture_progress = ExtResource("1_7f03s")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kq1q3")
}

[connection signal="button_down" from="Control/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="pressed" from="skipButton" to="." method="_on_skip_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
